--- a/newEquipmentpage/projector.html
+++ b/newEquipmentpage/projector.html
@@ -102,7 +102,6 @@
     }
 
     .cardTitle {
-        background-color: rgb(255, 255, 255);
         width: 90%;
         height: 50px;
         text-align: left;
@@ -186,11 +185,60 @@
         text-decoration: none;
         text-decoration-line: none;
     }
+
+    .openbtn {
+        color: #000;
+        width: 50px;
+        height: 50px;
+        background-color: #ffffff;
+        border: none;
+        cursor: pointer;
+        display: none;
+        font-size: 40px;
+        font-weight: bolder;
+    }
+    .closebtn {
+        font-size: 50px;
+        color: #000;
+        text-align: right;
+        margin-right: 0;
+        display: none;
+    }
+
+    .itemTitle {
+        background-color: rgb(255, 255, 255);
+        width: 90%;
+        height: 50px;
+        text-align: left;
+        font-size: x-large;
+        align-content: center;
+        text-decoration-color: #000;
+        position: relative;
+        display: none;
+        padding-left: 20px;
+    }
+    @media (max-width: 768px) {
+        .openbtn {
+            display: block;
+        }
+        .sidebar {
+            width: 100%;
+            display: none;
+        }
+        .info {
+            display: block;
+        }
+        .itemTitle {
+            display: block;
+        }
+    }
 </style>
 </head>
 
 <div class="menu_container">
+    <button id="open" class="openbtn" onclick="openNav()">&#9776;</button>
     <div id="Sidebar" class="sidebar">
+        <a id="close" href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <div class="cardTitle">
             Section
         </div>
@@ -212,6 +260,9 @@
         </div>
         <!-- **Category** + Cat = Audio Category = Audio Cat -->
         <div class="help">
+            <div class="cardTitle">
+                Audio
+            </div>
             <a href="https://bookit.dmc.jhu.edu/passes/audio">
                 <div id="AudioCat" class="cardTop">
                     Audio
@@ -260,6 +311,9 @@
     <!-- display for projector -->
     <div id="Projector" class="info" visibility="visible">
         <div class="spacer"></div>
+        <div id="title" class="itemTitle">
+            Projectors
+        </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/Projectors">
                 <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Projectors.png" /> 
@@ -274,3 +328,16 @@
 
 </div>
 
+<script>
+    function openNav() {
+      document.getElementById("Sidebar").style.display = "block";
+      document.getElementById("Projector").style.display = "none"
+      document.getElementById("close").style.display = "block"
+    }
+    
+    function closeNav() {
+      document.getElementById("Sidebar").style.display = "none";
+      document.getElementById("Projector").style.display = "block"
+      document.getElementById("close").style.display = "none"
+    }
+</script>
