--- a/newEquipmentpage/colitems.html
+++ b/newEquipmentpage/colitems.html
@@ -16,7 +16,7 @@
             linkBtn.href = "https://bookit.dmc.jhu.edu/reserve/spaces/dmc"
         } else if (/https:\/\/bookit\.dmc\.jhu\.edu\/reserve\/spaces\/dmc/.test(window.location.href)) {
             naviBtn.textContent = "Go to Equipment"
-            linkBtn.href = "https://bookit.dmc.jhu.edu/reserve/equipment/dmc"
+            linkBtn.href = "https://bookit.dmc.jhu.edu/passes/equipment"
         }
     
     };
