--- a/newHomepage/banner.html
+++ b/newHomepage/banner.html
@@ -275,7 +275,7 @@
                                     </div>
                                 </a>
 
-                                <a href="https://bookit.dmc.jhu.edu/reserve/spaces/dmc">
+                                <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
                                     <div class="two-main-butts" style="background-color: #4d6ca9;">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/inlab_butt.png" />
                                         In-Lab Resources
@@ -305,7 +305,7 @@
                                     </div>
                                 </a>
 
-                                <a href="https://bookit.dmc.jhu.edu/reserve/spaces/dmc">
+                                <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
                                     <div class="two-main-butts" style="background-color: #4d6ca9;">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/inlab_butt.png" />
                                         In-Lab Resources
@@ -335,7 +335,7 @@
                                     </div>
                                 </a>
 
-                                <a href="https://bookit.dmc.jhu.edu/reserve/spaces/dmc">
+                                <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
                                     <div class="two-main-butts" style="background-color: #4d6ca9;">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/inlab_butt.png" />
                                         In-Lab Resources
