--- a/newEquipmentpage/startPageMobileFriendly.html
+++ b/newEquipmentpage/startPageMobileFriendly.html
@@ -156,11 +156,47 @@
         text-decoration-color: #000;
         color: #000;
     }
+
+    .openbtn {
+        color: #000;
+        width: 50px;
+        height: 50px;
+        background-color: #ffffff;
+        border: 1px solid #dddddd;
+        border-radius: 5px;
+        cursor: pointer;
+        display: none;
+    }
+
+    .closebtn {
+        font-size: x-large;
+        color: #000;
+        text-align: right;
+        margin-right: 0;
+        display: none;
+    }
+    @media (max-width: 768px) {
+        .openbtn {
+            display: block;
+        }
+        .closebtn {
+            display: block;
+        }
+        .sidebar {
+            width: 100%;
+        }
+        .info {
+            display: none;
+        }
+    }
+
 </style>
 </head>
 
 <div class="menu_container">
+    <!-- <button class="openbtn" onclick="openNav()">&#9776;</button> -->
     <div id="Sidebar" class="sidebar">
+        <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a> -->
         <div class="cardTitle">
             Section
         </div>
@@ -171,7 +207,7 @@
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/blackEquip.png" width="25px" height="25px">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/reserve/spaces/dmc">
+            <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
                 <div id="ResourcesBtn" class="card">
                     In-Lab Resources
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/blackInlab.png" width="25px" height="25px">
@@ -229,8 +265,20 @@
         </div>
     </div>
 
-    <div class="info">
+    <div id="cats" class="info">
         Please select a category to get started.
     </div>
 
 </div>
+
+<script>
+    function openNav() {
+      document.getElementById("Sidebar").style.display = "block";
+      document.getElementById("cats").style.display = "none"
+    }
+    
+    function closeNav() {
+      document.getElementById("Sidebar").style.display = "none";
+      document.getElementById("cats").style.display = "block"
+    }
+</script>
