--- a/newHomepage/banner.html
+++ b/newHomepage/banner.html
@@ -73,7 +73,8 @@
 
     .hero-text {
         text-align: center;
-        font-size: xx-large;
+        align-content: center;
+        font-size: 50px;
         font-weight: 900;
         font-style: normal;
         font-family: "Figtree", sans-serif;
