pushing all changes

--- a/newEquipmentpage/audiopage.html
+++ b/newEquipmentpage/audiopage.html
@@ -328,7 +328,7 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/Headphones">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Headphones.png" />
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/Headphones_optimized_5000.jpg" />
             </a>
             <br>
             <div class="padding">
