--- a/newHomepage/banner.html
+++ b/newHomepage/banner.html
@@ -28,7 +28,6 @@
         height: 100px;
         font-weight: bold;
         font-size: large;
-        
     }
 
     .two-main-butts {
@@ -45,6 +44,12 @@
         font-weight: 500;
         font-size: 14px;
         gap: 5px;
+        background-color: #000;
+    }
+
+    .two-main-butts div:hover {
+        background-color: white;
+        color: #000;
     }
 
     .two-main-butts img {
@@ -64,7 +69,7 @@
     }
 
     .spacer {
-        height: 30px;
+        height: 10px;
     }
 
     .bg {
@@ -120,9 +125,15 @@
     }
 
     a :hover {
-            text-decoration-line: none;
-            text-decoration-color:#000;
+        text-decoration-line: none;
+        text-decoration-color:#000;
+    }
+
+    @media (max-width: 1000px) {
+        .hero-text {
+            font-size: 40px;
         }
+    }
 
     @media (max-width: 768px) {
         .main-cont {
@@ -144,10 +155,10 @@
             gap: 20px;
         }
         .hero-text {
-            font-size: x-large;
+            font-size: 40px;
         }
         .spacer {
-            height: 20px;
+            height: 10px;
         }
 
         .two-main-butts {
@@ -169,7 +180,7 @@
             width: 90%;
         }
         .hero-text {
-            font-size: x-large;
+            font-size: 25px;
         }
         .menu-bar .links {
             display: flex;
@@ -270,14 +281,14 @@
                         <div class="banner">
                             <div class="two-main-butts-cont">
                                 <a href="https://bookit.dmc.jhu.edu/passes/equipment">
-                                    <div class="two-main-butts" style="background-color: #4d6ca9;">
+                                    <div class="two-main-butts">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/equip_butt.png" />
                                         Equipment
                                     </div>
                                 </a>
 
                                 <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
-                                    <div class="two-main-butts" style="background-color: #4d6ca9;">
+                                    <div class="two-main-butts">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/inlab_butt.png" />
                                         In-Lab Resources
                                     </div>
@@ -300,14 +311,14 @@
                         <div class="banner">
                             <div class="two-main-butts-cont">
                                 <a href="https://bookit.dmc.jhu.edu/passes/equipment">
-                                    <div class="two-main-butts" style="background-color: #4d6ca9;">
+                                    <div class="two-main-butts">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/equip_butt.png" />
                                         Equipment
                                     </div>
                                 </a>
 
                                 <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
-                                    <div class="two-main-butts" style="background-color: #4d6ca9;">
+                                    <div class="two-main-butts">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/inlab_butt.png" />
                                         In-Lab Resources
                                     </div>
@@ -330,14 +341,14 @@
                         <div class="banner">
                             <div class="two-main-butts-cont">
                                 <a href="https://bookit.dmc.jhu.edu/passes/equipment">
-                                    <div class="two-main-butts" style="background-color: #4d6ca9;">
+                                    <div class="two-main-butts">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/equip_butt.png" />
                                         Equipment
                                     </div>
                                 </a>
 
                                 <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
-                                    <div class="two-main-butts" style="background-color: #4d6ca9;">
+                                    <div class="two-main-butts">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/inlab_butt.png" />
                                         In-Lab Resources
                                     </div>
