--- a/newHomepage/contactUs.html
+++ b/newHomepage/contactUs.html
@@ -10,6 +10,19 @@
         font-size: 14px;
     }
 
+    .s-lc-hp-calendar-header {
+        font-size: 28px;
+    }
+
+    .s-lc-content {
+        font-family: "Figtree", sans-serif;
+    }
+
+
+    .s-lc-timezone {
+        display: none;
+    }
+
     .contact-row {
         display: flex;
         align-items: left;
